# DuncansResources

./: .gitmodules  README.md  jetson_internet.md
demos/: README.md
demos/median_filter/: CMakeLists.txt
demos/median_filter/inc/: fifo_median.hpp
demos/median_filter/src/: fifo_median.cpp  main.cpp
demos/motion_profile_generation/: CMakeLists.txt  meson.build
demos/motion_profile_generation/inc/: motion_state.hpp  parametric_output.hpp  tank_drive.hpp  vec2.hpp
demos/motion_profile_generation/src/: main.cpp  parametric_output.cpp  vec2.cpp
demos/path_viewer/: CMakeLists.txt  meson.build
demos/path_viewer/inc/: load_shader.hpp  primitive_renderer.hpp  spline.hpp  spline_parametric.hpp
demos/path_viewer/shaders/: fragment.glsl  vertex.glsl
demos/path_viewer/src/: load_shader.cpp  main.cpp  primitive_renderer.cpp  spline_parametric.cpp  tank_drive.cpp
demos/realsense_easy/: CMakeLists.txt  meson.build
demos/realsense_easy/inc/: bgrd_frame_source.hpp  histogram.hpp
demos/realsense_easy/include/: histogram.hpp  realsense_bgrdfs.hpp
demos/realsense_easy/src/: bgrd_frame_source.cpp  main.cpp  realsense_bgrdfs.cpp
demos/sockets/: README.md  meson.build
demos/sockets/inc/: simple_socket.hpp  simple_socket_client.hpp  simple_socket_server.hpp
demos/sockets/src/: main.cpp  simple_socket.cpp  simple_socket_client.cpp  simple_socket_server.cpp
demos/spline_viewer/: CMakeLists.txt  meson.build
demos/spline_viewer/inc/: growable_float_buffer.hpp  line_renderer.hpp
demos/spline_viewer/src/: growable_float_buffer.cpp  line_renderer.cpp  main.cpp  spline.cpp
demos/strip_detection/: .gitignore  CMakeLists.txt  meson.build
demos/strip_detection/src/: main.cpp
demos/triangle/shaders/: vertex.glsl
demos/triangle/src/: main.cpp
docs/: README.md  jetson_internet.md  using_gradlew.md
opengl/: CMakeLists.txt  README.md
opengl/shaders/: vertex.glsl
opengl/src/: main.cpp
opengl/triangle/: CMakeLists.txt
opengl/triangle/inc/: load_shader.hpp
opengl/triangle/src/: load_shader.cpp
opengl/utilities/: load_shader.hpp
sockets/: CMakeLists.txt  README.md
sockets/inc/: simple_socket.hpp  simple_socket_client.hpp  simple_socket_server.hpp
sockets/src/: main.cpp  simple_socket.cpp  simple_socket_client.cpp  simple_socket_server.cpp
utils/: README.md
utils/graphics/: growable_float_buffer.cpp  growable_float_buffer.hpp  load_shader.cpp  load_shader.hpp  primitive_renderer.cpp  primitive_renderer.hpp
utils/math/: fifo_median.cpp  fifo_median.hpp  histogram.hpp
utils/opencv/: bgrd_frame_source.cpp  bgrd_frame_source.hpp  histogram.hpp  realsense_bgrdfs.cpp  realsense_bgrdfs.hpp
utils/paths/: parametric_output.cpp  parametric_output.hpp  tank_drive.cpp  tank_drive.hpp
utils/sockets/: simple_socket.cpp  simple_socket.hpp  simple_socket_client.cpp  simple_socket_client.hpp  simple_socket_server.cpp  simple_socket_server.hpp
utils/splines/: spline.cpp  spline.hpp  spline_parametric.cpp  spline_parametric.hpp
utils/vectors/: motion_state.hpp  vec2.cpp  vec2.hpp
